(#3677) Callout Box Spacing Fix

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_profile-panel.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_profile-panel.scss
@@ -175,7 +175,7 @@
   background: $white;
   border: 1px solid $yetAnotherGrey;
   box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.15);
-  margin: 1.3em 0 0 0;
+  margin: 1.3em 0 1.5em 0;
   padding: 15px;
 
   h2 {
